# ADM1_RL

./: .gitignore  LICENSE  README.md  evaluate_controller.py  pyproject.toml
analysis/: __init__.py  make_table_comparison.py  make_table_stage1.py  plot_ablation.py  plot_ablation_v1.py  plot_combo.py  plot_combo_v7.py  plot_controller_profile.py  plot_entropy_coef.py  plot_final_performance.py  plot_generalization.py  plot_generalization_v4.py  plot_learning_curves.py  plot_reward_timeseries.py  plot_scenario_schematic.py  plot_scenario_trajectories.py
baselines/: baseline_controllers.py  evaluate_baselines.py  mpc_controller.py  nmpc_controller.py  tune_pid.py
env/: adm1_gym_env.py  adm1_gym_env_std.py  adm1_solver.py  adm1_solver_std.py  scenario_manager.py  scenarios.yaml
evaluation/: eval_ablation.py  evaluate_rl_policy.py  evaluate_std_all.py  full_evaluation.py  metrics_calculator.py
examples/: custom_controller_tutorial.ipynb  my_controller.py
results/baselines/: baseline_results.csv  baseline_results.json
results/evaluation/: cross_scenario_results.csv  cross_scenario_results.json
scripts/: eval_missing_seeds.py  eval_missing_seeds_cross.py  eval_multi_missing_seeds.py  rerun_baseline_eval.py  rerun_eval.py  rerun_mpc_eval.py  rerun_multi_eval.py  rerun_thermal_baseline_eval.py  train_multi_missing_seeds.py
training/: reward_configs.py  run_experiment.py  train_sac.py  train_sac_std.py
training/configs/: ablation_linear_eval.yaml  experiment_config.yaml  experiment_config_std.yaml  multiscenario.yaml  reward_ablation.yaml  train_extra_seeds.yaml  (+3 more)
(+901 files in other folders)
