[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adm1-rl"
version = "1.0.0"
description = "Safety-First RL Control of Anaerobic Digestion under Thermal Stress"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "torch>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tensorboard>=2.11",
]

[project.optional-dependencies]
figures = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
nmpc = [
    "scipy>=1.10",   # scipy.optimize used by NMPCController
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "training*", "baselines*", "evaluation*", "analysis*"]
